name:                epo-ops-download
version:             0.1.0.0
synopsis:            Download PDFs of patent documents using EPO OPS API
license:             AGPL-3
license-file:        LICENSE
author:              Martin Galese
maintainer:          martin@galese.net
copyright:           2017 Martin Galese
category:            Patent, API, Parsing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable epo-download
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , epo-ops-api
                     , protolude >= 0.1.6 && < 0.2
                     , options
                     , string-conversions
                     , http-types
                     , http-client
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude
